# partner-chains

./: .dockerignore  .envrc  .gitignore  .rustfmt.toml  .tmp_genesis_utxo  BEEFY_UPGRADE_SUMMARY.md  CONTRIBUTING.md  Cargo.nix  Cargo.toml  Dockerfile  Earthfile  Justfile  README.md  SECURITY.md  beefy_upgrade_report.md  build_no_beefy.sh  chain-spec.json  changelog.md  code_migration_v1.1_to_v1.2.md  config.json  contractlog.json  crate-hashes.json  crates.js  deny.toml  flake.nix  help.html  index.html  monitor_network.sh  out  partner-chains-cli-requirements.md  permissioned-candidates.json  queries-performance.md  release-notes-template.md  release-notes.md  release.sh  rust-toolchain.toml  search-index.js  settings.html  signed-2  src-files.js  (+3 more)
cli/commands/: Cargo.toml
cli/commands/src/: key_params.rs  lib.rs  output.rs  pc_contracts_cli_params.rs  registration_signatures.rs  sidechain_main_cli_params.rs
cli/node-commands/: Cargo.toml
cli/node-commands/src/: lib.rs
demo/node/: Cargo.toml  build.rs
demo/node/src/: chain_spec.rs  cli.rs  data_sources.rs  diff_sources.rs  inherent_data.rs  lib.rs  main.rs  main_chain_follower.rs  rpc.rs  service.rs  staging.rs  template_chain_spec.rs  testnet.rs
demo/runtime/: Cargo.toml
demo/runtime/src/: config.rs  ext.rs  genesis_config_presets.rs  header_tests.rs  lib.rs  mock.rs  test_helper_pallet.rs  tests.rs
e2e/: Cargo.toml
e2e-tests/: .gitignore  .sops.yaml  Earthfile  IMPLEMENTATION_SUMMARY.md  JOLTEON_LOCAL_SETUP.md  JOLTEON_TESTING_COMPLETE.md  README.md  pyproject.toml  pytest.ini  report_slack.sh  report_xray.sh  requirements.txt  run_jolteon_tests.sh
e2e-tests/config/: api_config.py  config.json
e2e-tests/config/pc_evm/: preprod.json
e2e-tests/config/scripts/: v-function-1975.script  v-function-2025.script
e2e-tests/config/substrate/: ci-ci.json  ci.json  ci_nodes.json  ci_stack.json  devnet-ci.json  devnet.json  devnet_nodes.json  devnet_stack.json  jolteon_docker_nodes.json  jolteon_docker_stack.json  jolteon_local-ci.json  jolteon_local_README.md  jolteon_local_nodes.json  jolteon_local_stack.json  known_hosts  local-ci.json  local.json  local_nodes.json  local_stack.json  staging-ci.json  staging.json  staging_nodes.json  staging_stack.json  test_jolteon_local_config.py  uat_nodes.json  uat_preview_nodes.json  uat_preview_stack.json
e2e-tests/docs/: configure-stack.md  run-tests-on-local-env.md  run-tests-on-new-env.md  secrets.md  working-with-xray.md
e2e-tests/src/: blockchain_api.py  blockchain_types.py  cardano_cli.py  decorators.py  log_filter.py  partner_chain_rpc.py  partner_chains_node.py  pc_block_finder.py  pc_evm_api.py  run_command.py  substrate_api.py
e2e-tests/src/db/: models.py
e2e-tests/src/db_sync/: models.py
e2e-tests/src/partner_chains_node/: models.py  node.py  smart_contracts.py
e2e-tests/tests/: README_jolteon_consensus.md  conftest.py  test_delegator_rewards.py  test_jolteon_advanced.py  test_jolteon_consensus.py  test_jolteon_consensus_investigation.py  test_jolteon_consensus_rpc.py  test_jolteon_debug.py  test_jolteon_local_example.py  test_jolteon_simple_debug.py  test_jolteon_two_chain_commit.py  test_rpc.py  test_smoke.py  test_substrate_smoke.py
e2e-tests/tests/active_flow/: test_active_flow.py
e2e-tests/tests/committee/: conftest.py  test_blocks.py  test_committee.py  test_multisig_governance.py  test_permissioned_registrations.py  test_registrations.py
e2e-tests/tests/delegator_rewards/: conftest.py  test_block_producer_assignment_validation.py  test_block_production_log.py  test_delegator_journey.py  test_spo_journey.py
e2e-tests/tests/governed_map/: conftest.py  test_governed_map.py  test_observability.py
e2e-tests/tests/passive_flow/: conftest.py  test_passive_flow.py
e2e-tests/tests/reserve/: conftest.py  test_bridge.py  test_main_chain_setup.py  test_reserve_management.py
e2e-tests/tests/smart_contracts/: conftest.py  test_native_token.py
e2e-tests/utils/: check_network_sync.py  find_block_range_of_sc_epoch.py  get_ariadne_committee_ratio.py  get_past_committees.py  pc_epoch_calc.py  substrate_helpers.py
e2e-tests/utils/block_size_benchmarks/: README.md  analyzer.py  extractor.py  transformer.py
e2e/config/: config.json
e2e/config/examples/: multisig_governance.yaml
e2e/config/substrate/: ci-ci.json  ci_nodes.json  ci_stack.json  devnet_nodes.json  devnet_stack.json  known_hosts  local_nodes.json  staging_nodes.json  (+3 more)
e2e/src/: apiconfig.rs  blockchain_api.rs  conftest.rs  lib.rs  reserve.rs  run_command.rs
mainchain-follower/db-sync-follower/: Cargo.toml
mainchain-follower/main-chain-follower-api/: Cargo.toml  README.md
mainchain-follower/main-chain-follower-cli/: Cargo.toml
mainchain-follower/mock/: Cargo.toml  readme.md
node/: Cargo.toml
node/chain-params/: Cargo.toml  readme.md
node/node/: Cargo.toml
node/runtime/: Cargo.toml
node/src/: benchmarking.rs  chain_init.rs  chain_spec.rs  cli.rs  inherent_data.rs  lib.rs  main.rs  main_chain_follower.rs  rpc.rs  service.rs  staging.rs  template_chain_spec.rs  testnet.rs
pallets/address-associations/: Cargo.toml
pallets/block-rewards/: Cargo.toml
pallets/native-token-management/: Cargo.toml
pallets/pallet-session-runtime-stub/: Cargo.toml
pallets/partner-chains-session/: Cargo.toml
pallets/session-validator-management/: Cargo.toml
pallets/sidechain/: Cargo.toml
partner-chains-cli/: Cargo.toml  readme.md
partner-chains-cli/src/: cardano_cli.rs  cardano_key.rs  config.rs  dereg.rs  io.rs  keystore.rs  main.rs  pc_contracts_cli_resources.rs  sidechain_main_cli_resources.rs  smart_contracts.rs
primitives/address-associations/: Cargo.toml
primitives/authority-selection-inherents/: Cargo.toml
primitives/block-rewards/: Cargo.toml
primitives/chain-params/: Cargo.toml  readme.md
primitives/domain/: Cargo.toml
primitives/epoch-derivation/: Cargo.toml
primitives/mock-types/: Cargo.toml
primitives/native-token-management/: Cargo.toml  README.md
primitives/plutus-data/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs  mock.rs
(+38073 files in other folders)
