[workspace]
members = [
    "cli/commands",
    "node",
	"pallets/block-rewards",
	"pallets/sidechain",
	"pallets/sidechain/rpc",
    "pallets/session-validator-management",
    "pallets/session-validator-management/benchmarking",
	"pallets/session-validator-management/rpc",
    "primitives/block-rewards",
	"primitives/chain-params",
    "primitives/domain",
    "primitives/epoch-derivation",
    "primitives/mock-types",
    "primitives/selection",
	"primitives/sidechain-block-search",
    "primitives/sidechain-slots",
    "primitives/authority-selection-inherents",
	"mainchain-follower/main-chain-follower-api",
	"mainchain-follower/main-chain-follower-cli",
    "mainchain-follower/db-sync-follower",
	"mainchain-follower/mock",
	"utils/byte-string-derivation",
	"utils/plutus",
	"utils/plutus/plutus-datum-derive",
    "runtime",
    "utils/time-source",
    "primitives/sidechain-mc-hash",
    "primitives/session-validator-management",
	"primitives/session-validator-management/query",
    "primitives/session-manager",
    "primitives/sidechain",
	"partner-chains-cli"
]
resolver = "2"

[profile.release]
panic = "unwind"

[profile.production]
inherits = "release"

# Sacrifice compile speed for execution speed by using optimization flags:

# https://doc.rust-lang.org/rustc/linker-plugin-lto.html
lto = "fat"
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1

[workspace.dependencies]
anyhow = "1.0.75"
async-trait = "0.1.68"
assert_cmd = "2.0.12"
clap = { version = "4.4.18", features = ["derive"] }
ed25519-zebra = { version = "4.0.3" }
ed25519 = { version = "2.2.2" }
figment = { version = "0.10.10", features=["env","test"]}
futures = { version = "0.3.30", features = ["thread-pool"]}
hex = { version = "0.4.3", features = ["alloc"], default-features = false }
hex-literal = "0.4.1"
itertools = "0.12.1"
const-decoder = "0.3.0"
jsonrpsee = { version = "0.23.2", features = ["client-core", "server", "macros"] }
libp2p-identity = "0.2.8"
log = { version = "0.4.17", default-features = false }
minicbor = { version = "0.20.0", features = ["alloc"] }
num-bigint = { version = "0.4.3", default-features = false }
num-traits = { version = "0.2.8", default-features = false }
parity-scale-codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive", "max-encoded-len"] }
quickcheck = { version = "1.0.3" }
proptest = { version = "1.2.0" }
quickcheck_macros = { version = "1" }
quote = "1.0"
rand_chacha = { version = "0.3.1", default-features = false }
rand = { version = "0.8.5", default-features = false }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
secp256k1 = { version = "0.28.2", default-features = false }
serde = { version = "1.0.188", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = '1.0.113', default-features = false, features = ['alloc'] }
syn = "2.0.48"
tempfile = "3.10.1"
thiserror = { version = "1.0.30" }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
lazy_static = "1.4.0"
lru = { version = "0.12.2" }
pretty_assertions = { version = "1.4.0" }
derive_more = { version = "0.99.17" }
num-derive = { version = "0.4.2" }
env_logger = { version = "0.11.2" }
bigdecimal = { version = "0.4.3" }
blake2b_simd = { version = "1.0.2", default-features = false }
sealed_test = { version = "1.0.0" }
derive-new = { version = "0.6.0" }
inquire = { version = "0.7.5" }

# substrate dependencies
frame-benchmarking = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
frame-benchmarking-cli = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
frame-executive = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
frame-support = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
frame-system = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
frame-system-benchmarking = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
frame-system-rpc-runtime-api = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
frame-try-runtime = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
pallet-aura = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
pallet-balances = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
pallet-grandpa = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
pallet-sudo = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
pallet-timestamp = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
pallet-transaction-payment = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
pallet-transaction-payment-rpc = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
pallet-partner-chains-session = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
sc-basic-authorship = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
sc-cli = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
sc-client-api = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
sc-client-db = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
sc-consensus = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
sc-consensus-aura = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
sc-consensus-grandpa = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
sc-consensus-grandpa-rpc = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
sc-executor = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
sc-network = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
sc-rpc = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
sc-rpc-api = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
sc-service = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
sc-telemetry = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
sc-transaction-pool = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
sc-transaction-pool-api = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
sc-offchain = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
sp-api = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
sp-block-builder = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
sp-blockchain = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
sp-consensus = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
sp-consensus-aura = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
sp-consensus-grandpa = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
sp-consensus-slots = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
sp-core = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
sp-crypto-hashing = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
sp-inherents = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
sp-io = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
sp-keyring = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
sp-offchain = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
sp-runtime = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
sp-session = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
sp-partner-chains-session = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
sp-staking = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
sp-std = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
sp-timestamp = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
sp-transaction-pool = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
sp-version = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
sp-storage = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
sp-weights = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
substrate-build-script-utils = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
substrate-frame-rpc-system = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
substrate-prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
substrate-wasm-builder = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }
sp-genesis-builder = { default-features = false, git = "https://github.com/gilescope/polkadot-sdk.git", branch = "partnerchains-stable2407-max-allocation-bump" }

# local dependencies
sidechain-runtime = { path = "runtime" }
pallet-block-rewards = { path = "pallets/block-rewards", default-features = false }
pallet-sidechain = { path = "pallets/sidechain", default-features = false }
pallet-sidechain-rpc = { path = "pallets/sidechain/rpc", default-features = false }
sp-session-validator-management = { default-features = false, path = "primitives/session-validator-management" }
sp-session-validator-management-query  = { default-features = false, path = "primitives/session-validator-management/query" }
pallet-session-validator-management = { default-features = false, path = "pallets/session-validator-management" }
pallet-session-validator-management-benchmarking = { default-features = false, path = "pallets/session-validator-management/benchmarking" }
pallet-session-validator-management-rpc = { path = "pallets/session-validator-management/rpc" }
sp-block-rewards = { path = "primitives/block-rewards", default-features = false }
selection = { version = "0.1.0", path = "primitives/selection", default-features = false }
sidechain-domain = { path = "primitives/domain", default-features = false }
sidechain-block-search = { path = "primitives/sidechain-block-search", default-features = false }
main-chain-follower-api = { path = "mainchain-follower/main-chain-follower-api", default-features = false }
db-sync-follower = { path = "mainchain-follower/db-sync-follower" }
main-chain-follower-mock = { path = "mainchain-follower/mock", default-features = false }
plutus = { path = "utils/plutus", default-features = false}
plutus-datum-derive = { default-features = false, path = "utils/plutus/plutus-datum-derive" }
byte-string-derive = { default-features = false, path = "utils/byte-string-derivation" }
sidechain-slots = { path = "primitives/sidechain-slots", default-features = false }
epoch-derivation = { path = "primitives/epoch-derivation", default-features = false }
mock-types = { path = "primitives/mock-types", default-features = false }
cli-commands = { path = "cli/commands" }
time-source = { path = "utils/time-source" }
sidechain-mc-hash = { path = "primitives/sidechain-mc-hash", default-features = false }
authority-selection-inherents = { path = "primitives/authority-selection-inherents", default-features = false }
session-manager = { path = "primitives/session-manager", default-features = false }
sp-sidechain = { path = "primitives/sidechain", default-features = false }
chain-params = { path = "primitives/chain-params", default-features = false }
